--- a/server/jsconfig.json
+++ b/server/jsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "module": "ESNext",
-        "moduleResolution": "Node",
+        "moduleResolution": "nodenext",
         "target": "ES2020",
         "jsx": "react",
         "strictNullChecks": true,
