--- a/server/codebreaker.service.template
+++ b/server/codebreaker.service.template
@@ -4,13 +4,16 @@ Description=codebreaker game service
 Documentation=https://github.com/Loomie/codebreaker-game
 Wants=network.target
 After=network.target
-RequiresMountsFor=/path/to/codebreaker-game/
 
 [Service]
 Type=simple
+# adapt to your user name
 User=codebreaker-game
+# adapt to your directory
 WorkingDirectory=/path/to/codebreaker-game/server/
 Environment="NODE_ENV=production" "PORT=12034"
+# adapt path to node.js if not installed globally
+ExecStartPre=/usr/bin/npm install
 ExecStart=/usr/bin/node server.mjs
 Restart=on-failure
 
